Fix text truncation on organiser/place rows
Flex items need min-width: 0 to allow shrinking below content size,
otherwise overflow: hidden and text-overflow: ellipsis have no effect.

--- a/app/assets/stylesheets/components/event_component.scss
+++ b/app/assets/stylesheets/components/event_component.scss
@@ -105,6 +105,7 @@
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
+		min-width: 0;
 	}
 
 	&__location {
